examples/datalog/08_negation/39_negation_in_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_neg_agg
Knowledge graph 'test_neg_agg' created.
Switched to knowledge graph: test_neg_agg
> .kg use test_neg_agg
Switched to knowledge graph: test_neg_agg
> +items[(1, "A"), (2, "B"), (3, "C"), (4, "D"), (5, "E")].
Inserted 5 fact(s) into 'items'.
> +exclude[("B",), ("D",)].
Inserted 2 fact(s) into 'exclude'.
> count_included(<COUNT:Id>) :- items(Id, Name), !exclude(Name).
Script error: Parse error: Unknown aggregate function: 
